--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
   },
   "dependencies": {
     "@pinia/nuxt": "^0.5.1",
+    "@vee-validate/zod": "^4.13.1",
     "ant-design-vue": "^4.2.1",
     "nuxt": "^3.11.2",
     "pinia": "^2.1.7",
+    "vee-validate": "^4.13.1",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@nuxtjs/eslint-config-typescript": "^12.1.0",
+    "typescript": "^5.4.5",
     "crud-generate-cli": "^1.0.1",
     "sass": "^1.77.0",
     "unplugin-vue-components": "^0.27.0"
